# pomodoro-timer

./: Cargo.toml
.github/workflows/: build.yml
src/: main.rs
ui/: appwindow.slint
